testsuite/poke.pkl/asm-stmt-diag-1.pk
/* { dg-do compile } */

asm ("":
     1 + 2 /* { dg-error "l-value" } */
    );
